[gd_scene load_steps=5 format=3 uid="uid://c6p3384fvc0ir"]

[ext_resource type="PackedScene" uid="uid://dg3ikms7niw6" path="res://Scenes/SettingsPage/collapsible_setting_base.tscn" id="1_60ion"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/metallic_dice_themes_setting.gd" id="2_dfgnu"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="3_4k2kh"]
[ext_resource type="PackedScene" uid="uid://ds66lujjolvu" path="res://Scenes/SettingsPage/theme_list_item.tscn" id="4_ejqx1"]

[node name="MetallicDiceThemesSetting" instance=ExtResource("1_60ion")]
script = ExtResource("2_dfgnu")

[node name="CollapsibleContainer" parent="TopLevelContainer" index="1"]
visible = false

[node name="ThemeContainer" type="VBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="0"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -52.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_4k2kh")
theme_override_constants/separation = 5
alignment = 1

[node name="GoldTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="0" instance=ExtResource("4_ejqx1")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "gold"

[node name="SteelTheme" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ThemeContainer" index="1" instance=ExtResource("4_ejqx1")]
layout_mode = 2
size_flags_vertical = 4
die_theme_name = "steel"
